--- a/app/src/main/res/layout/activity_toss.xml
+++ b/app/src/main/res/layout/activity_toss.xml
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:padding="@dimen/_10sdp"
-            android:text="Select toss winning team"
+            android:text="@string/selection_of_team"
             android:textAllCaps="true"
             android:textColor="@color/purple_700"
             android:textSize="@dimen/_12sdp"
