--- a/app/src/main/res/layout/activity_schedule_cricket_details.xml
+++ b/app/src/main/res/layout/activity_schedule_cricket_details.xml
@@ -683,7 +683,7 @@
             </RelativeLayout>
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/mb_create"
+                android:id="@+id/mb_submit_final"
                 style="@style/Widget.MaterialComponents.Button"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_30sdp"
