--- a/app/src/main/res/layout/activity_submit_cricket_details.xml
+++ b/app/src/main/res/layout/activity_submit_cricket_details.xml
@@ -698,8 +698,9 @@
                 android:layout_height="@dimen/_30sdp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
+                android:layout_marginBottom="@dimen/_20sdp"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:backgroundTint="@color/purple_500"
                 android:fontFamily="@font/opensans_bold"
                 android:text="@string/start_scoring"
