--- a/app/src/main/res/layout/bottom_dialog_live_scoring.xml
+++ b/app/src/main/res/layout/bottom_dialog_live_scoring.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
     android:orientation="vertical">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,6 +13,14 @@
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_10sdp"
         android:orientation="vertical">
+
+        <View
+            android:layout_width="@dimen/_30sdp"
+            android:layout_height="@dimen/_4sdp"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/_10sdp"
+            android:background="@drawable/button_bg_top"
+            android:backgroundTint="@color/dark_grey"/>
 
         <TextView
             android:id="@+id/tv_Live_Scoring"
