App is commited at 01-03-24

--- a/app/src/main/res/layout/activity_custome_camera.xml
+++ b/app/src/main/res/layout/activity_custome_camera.xml
@@ -29,12 +29,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:padding="@dimen/_5sdp"
             android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/app_name"
+            android:padding="@dimen/_5sdp"
             android:scaleType="centerCrop"
             android:src="@drawable/close_black_24dp"
-            app:tint="@color/white"
-            android:contentDescription="@string/app_name" />
+            app:tint="@color/white" />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
