--- a/app/src/main/res/layout/activity_add_tournament.xml
+++ b/app/src/main/res/layout/activity_add_tournament.xml
@@ -109,6 +109,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/filledInputAwards"
                     style="@style/OutlinedRoundBox"
                     android:layout_width="match_parent"
                     app:boxBackgroundColor="@color/white"
